# CppWithCMakeTemplate

./: CMakeLists.txt  README.md
include/: CppWithCMakeTemplate.h
src/: CppWithCMakeTemplate.cpp
